[Harmony Cast Dialog] Change the header text from "Cast to" to "Cast"

Bug: 878541
Change-Id: I2501fa03d737154697346a76c1a7e20758debd7f
Reviewed-on: https://chromium-review.googlesource.com/1214075
Reviewed-by: mark a. foltz <mfoltz@chromium.org>
Commit-Queue: Takumi Fujimoto <takumif@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590018}
Former-commit-id: 8fb8a4a958113df7fa5286bb30a5d4ea5aef07cb